cleaned get my complaints endpoint
